JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre2

Thanks to Matt Albrecht for contributing to this release.

{{{ Editing

- "Complete Word" now inserts the longest common prefix if there is more
  than one possible completion (the popup is still displayed as well).

}}}
{{{ User Interface

- The Global Options dialog box has been rearranged a little. There are
  two new panes, Autosave & Backup, and View. The Loading & Saving pane
  has been removed.

- "Copy" button in Activity Log window now copies entire log if nothing
  is selected.

}}}
{{{ Syntax Highlighting

- Updated Inform syntax highlighting (Matt Albrecht).

- Added S+ syntax highlighting (Matt Albrecht).

}}}
{{{ Plugin Loader

- The plugin manager now loads plugins immediately after they are
  installed if they are using the jEdit 4.2 plugin API, and unloads
  plugins when removing and updating. Note that a restart is still
  required after updating from a jEdit 4.1 version of a plugin to the
  4.2 plugin, but future updates do not require a restart.

- Added an option to Global Options->Plugin Manager to leave the
  downloaded ZIP archives in ~/.jedit/PluginManager.download.

- If a plugin failed to load, its actions, dockables, etc are no longer
  visible from the UI.

}}}
{{{ Scripting Changes

- BeanShell 1.3a1 included. This release features improved error
  reporting, code cleanups and minor bug fixes.

}}}
{{{ Bug Fixes

- It was possible to open multiple plugin manager instances from the
  "Plugin Error" dialog box.

- Fixed selection issue when right-clicking on a file system browser
  window.

- The file system browser would report files larger than 1 megabyte as
  being an order of magnitude smaller, eg 13 kilobytes instead of 13
  megabytes.

- Changing the folding mode to "none" did not work correctly.

- Changing from a syntax highlighting mode to text mode did not
  invalidate line contexts.

- The file system browser's "Open in" menu didn't work.
